[backend] Add GET /categories, update type in GET /months/{yearMonth}
