# backend/src/main/kotlin/io/github/lawseff/budget/domain/category/CategoryType.kt
@@ -1,0 +1,5 @@
+package io.github.lawseff.budget.domain.category
+
+enum class CategoryType {
+    INCOME, SAVINGS, NEEDS, WANTS
+}
